--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgba(245, 253, 255, 0.8);
   font-family: mont;
+  margin: 0;
 }
 .top-nav {
   display: flex;
@@ -52,8 +53,6 @@ body {
   overflow: hidden;
   background-color: rgba(245, 253, 255, 0.8);
   flex-direction: row;
-}
-.list-item {
 }
 .list-item .item {
   color: #11346f;
@@ -216,6 +215,7 @@ body {
 .grid {
   padding: 10px;
   display: grid;
+  align-items: inherit;
 
   justify-content: space-evenly;
   grid-template-columns: 0.2fr 0.2fr 0.2fr 0.2fr;
@@ -224,21 +224,61 @@ body {
   border-radius: 10px;
   max-width: 686px;
 }
-.sect-1 {
-  padding-bottom: 45px;
-}
 .top-graph {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 80px;
 }
 .buttons {
   display: flex;
   flex-direction: column;
   margin-top: 30px;
+  align-items: center;
 }
 .btn-3 {
   margin: 10px;
   padding: 10px;
   font-size: 25px;
+  border-radius: 30px;
+  background-color: #197aff;
+  color: white;
+  max-width: 438px;
+}
+
+.btn-4 {
+  border-radius: 30px;
+  background-color: rgba(77, 145, 207, 0.15);
+  max-width: 255px;
+  height: 34px;
+  border: none;
+}
+.rec24 {
+  background-color: #11346f;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.span1 {
+  align-self: center;
+  color: white;
+  font-size: 16px;
+  font-weight: 570;
+  padding: 32px;
+}
+.pic {
+  padding: 5px;
+}
+.buy {
+  background-image: linear-gradient(18.72deg, #aeccff -18.14%, #197aff 165.34%);
+}
+.buybox {
+  border: 1px solid #197aff;
+  border-radius: 30px;
+  max-width: 360px;
+  max-height: 530px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 10px;
 }
