--- a/responsive.css
+++ b/responsive.css
@@ -3,12 +3,14 @@ body {
   margin: 0;
   background-color: #f5fdff;
 }
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 481px) {
+  .navbar {
+    display: none;
+  }
   body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 400px;
     align-self: center;
   }
 
@@ -58,7 +60,7 @@ body {
     color: #213786;
   }
   .cancer {
-    left: 48%;
+    left: 65%;
     position: absolute;
     width: 108px;
     top: -25%;
@@ -66,7 +68,7 @@ body {
   .text-2 {
     text-align: center;
     font-size: 14px;
-    padding-top: 27px;
+    padding-top: 54px;
     color: #262626;
   }
   .text--2 {
@@ -77,13 +79,14 @@ body {
     flex-direction: row;
     justify-content: space-around;
     text-align: center;
-    padding-top: 30px;
+    align-items: center;
+    align-items: center;
   }
   .infographic {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 12px;
+    font-size: 6px;
     color: #11346f;
   }
   .buttons {
@@ -243,17 +246,20 @@ body {
     margin: 10px 0 80px;
   }
   .pics-content {
-    border: 1px solid black;
-    width: 60%;
-    margin: 0 auto;
+    position: absolute;
+    width: 100%;
+    top: -75px;
   }
-  .pics-content > img {
-    border: 1px solid rgb(255, 81, 81);
+  .pics-content-2 {
+    position: absolute;
+    width: 100%;
+    top: -75px;
   }
   .buy-text {
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
   }
   .green-box {
     background-color: #57ac73;
@@ -261,6 +267,7 @@ body {
     padding: 6px 16px 6px 16px;
     font-size: 16px;
     color: white;
+    width: 50%;
   }
   .span-3 {
     display: flex;
@@ -277,13 +284,15 @@ body {
 
   .price-strong {
     color: #93a2bb;
+    position: relative;
   }
   .line {
     position: absolute;
-    left: 50%;
-    top: 148%;
+    left: -5%;
+    top: 39%;
     width: 110px;
   }
+
   .afterpay {
     display: flex;
     flex-direction: row;
@@ -296,7 +305,6 @@ body {
     justify-content: center;
     align-items: center;
     padding: 3px;
-    margin-right: -17px;
   }
   .offer-box {
     display: flex;
@@ -305,7 +313,10 @@ body {
     border-radius: 19px;
     padding: 9px;
     margin: 7px;
+    width: 93%;
+    overflow: hidden;
   }
+
   .offer-box-1 {
     display: flex;
     flex-direction: row;
@@ -323,15 +334,17 @@ body {
   }
   .box-text-1 {
     background-color: #bff5be;
-    padding: 10px;
+    padding: 9px;
     margin: -1px;
     border-radius: 17px;
     width: 54%;
     text-align: center;
     border: 1px solid #99d298;
+    width: 54%;
+    margin-left: -7px;
   }
+
   .box-text-2 {
-    padding: 10px;
     margin: 0;
     border-radius: 48px;
     text-align: center;
@@ -359,16 +372,17 @@ body {
     line-height: 24px;
     margin-top: 10px;
     margin-bottom: 10px;
+    width: 95%;
   }
   .payments {
     margin: 10px;
-    width: 100%;
+    width: 85%;
   }
   .img-4 {
-    position: absolute;
-    top: 183%;
-    left: 18%;
-    width: 242px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
   .arrow-4 {
     position: absolute;
@@ -378,19 +392,22 @@ body {
   }
   .red-box {
     background-color: #ac5780;
-    max-width: 100px;
+    width: 55%;
     font-size: 12px;
     color: white;
     align-self: center;
     border-radius: 30px;
     line-height: 30px;
-    padding: 0 10px 0 10px;
+    text-align: center;
   }
   .line-1 {
     position: absolute;
-    left: 50%;
-    top: 210%;
+    left: -7%;
+    top: 37%;
     width: 110px;
+  }
+  .pics-content-3 {
+    margin: 20px;
   }
   .slider {
     display: flex;
@@ -400,7 +417,7 @@ body {
     padding-left: 5px;
     padding-right: 5px;
     white-space: nowrap;
-    padding-right: 60px; /* scroll better */
+    width: 100%;
   }
   .review-box {
     width: 285px;
@@ -466,7 +483,6 @@ body {
     justify-content: space-evenly;
   }
   .sect-3 {
-    width: 100vw;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -527,6 +543,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 18px;
   }
   .faq-head {
     text-align: center;
@@ -549,7 +566,7 @@ body {
   }
   .pic {
     margin: 25px;
-    width: 85%;
+    width: 60%;
     align-self: center;
   }
   .faq-drop {
@@ -570,4 +587,72 @@ body {
   .show {
     display: block;
   }
+  .additional {
+    display: none;
+  }
+  .text--2 {
+    display: none;
+  }
+  .grid {
+    display: none;
+  }
+  .grid-small {
+    display: flex;
+  }
+  .shipping {
+    display: none;
+  }
+  .refund {
+    display: none;
+  }
+  .pic--5 {
+    width: 100%;
+  }
+  #accordion {
+    margin-top: 24px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .pic-1 {
+    width: 100%;
+  }
+}
+
+#accordion {
+  color: #ffffff;
+}
+.accordion-menu {
+  border: 1px solid #008080;
+  border-radius: 9px;
+  margin-bottom: 16px;
+  overflow: hidden;
+}
+
+.accordion-header {
+  display: flex;
+  padding: 20px 30px;
+  cursor: pointer;
+  background: #194081;
+  border-radius: 9px 9px 0 0;
+  border-bottom: 1px solid #31548e;
+}
+
+.title {
+  flex: 1;
+}
+
+.icon {
+  width: 20px;
+}
+
+.accordion-content {
+  max-height: 0;
+  transition: max-height 1s ease-out;
+  overflow: hidden;
+}
+.content-transition {
+  max-height: 1500px;
+  transition: max-height 3s ease-in;
+  padding: 20px 30px;
 }
